# babel-md

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCLING_OPTIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/babel_md/: config.py  converter.py  main.py  models.py
src/babel_md/routes/: convert.py  health.py
tests/: conftest.py  test_convert.py  test_converter.py  test_health.py
